--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,13 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs =  LPC1768
+                LPC1769
+                STM32F103RC_btt
+                BIGTREE_SKR_PRO
+                BIGTREE_SKR_2
+                BIGTREE_GTR_V1_0
+                BIGTREE_OCTOPUS_V1_0
 include_dir  = Marlin
 extra_configs =
     ini/avr.ini
