Adjust Stepper Current

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ default_envs =  LPC1768
                 BIGTREE_SKR_PRO
                 BIGTREE_SKR_2
                 BIGTREE_GTR_V1_0
-                BIGTREE_OCTOPUS_V1_0
+                BIGTREE_OCTOPUS_V1
 include_dir  = Marlin
 extra_configs =
     ini/avr.ini
